k8s-manifests/database-deployment.yaml
# 1. DB WRAPPER SERVICE (The Python Logic)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-service
  template:
    metadata:
      labels:
        app: database-service
    spec:
      containers:
      - name: database-service
        image: taiweien/egt307-database:v2 
        ports:
        - containerPort: 8000
---
# 2. DB SERVICE WRAPPER (INTERNAL DNS)
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database-service
  ports:
    - port: 8000
      targetPort: 8000
